# Yolov5_RK3588

./: .gitignore  Dockerfile  README.md  config.json  main.py  run.sh  utils.py
.github/workflows/: stale.yml
Firefly/: README_FIREFLY.md
OrangePi/: README_ORANGEPI.md
RK3588/modules/: utils.py
RK3588/rknpu2/: CMakeLists.txt  build.sh
RK3588/rknpu2/include/: postprocess.h
RK3588/rknpu2/src/: main.cc  postprocess.cc
RK3588/rknpu2_python3/: frames_ids.txt  main.py  main_bytetracker.py  main_database.py  main_server.py  main_storages.py  server.py
addons/: __init__.py  storages.py  utils.py
addons/byte_tracker/: __init__.py  byte_tracker.py  matching.py  utils.py
addons/pulse_counter/: .gitignore  __init__.py  monitor.py  utils.py
addons/storages/: __init__.py  storages.py
addons/telegram_notifier/: .gitignore  __init__.py  main.py
addons/webui/: .gitignore  __init__.py  server.py  utils.py
addons/webui_flask/: __init__.py  server.py
base/: __init__.py  config.py  format_detections.py  rk3588.py  utils.py
base/camera/: __init__.py  camera.py  variable_camera.py
base/inference/: __init__.py  inference.py  rknn_yolov5.py  rknn_yolov5_variable.py
base/post_process/: __init__.py  pidnet.py  post_process_common.py  rknn_post_process.py  yolact.py  yolov5.py
base/pre_process/: __init__.py  pre_process.py  pre_process_common.py  rknn_pre_process.py
config/: __init__.py  pidnet_config.json  rk3588_config.json  yolact_config.json  yolov5_config.json
install/: obj_det_autostart.service  requirements.txt  set_autostart.sh
log/: __init__.py
(+113 files in other folders)
